--- a/index.html
+++ b/index.html
@@ -9,135 +9,19 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="style.css">
-  
+  <button id="btn">Fetch Info for New products</button>
 </head>
 <body>
 <center>
 <h1>Product Catalogue</h1>
+<br>
+<br>
+<img src="grocery.jpg">
 </center>
-<div id="carouselExampleIndicators" class="carousel slide" style=" margin:20px; margin-left:360px;margin-right:360px"data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-  </ol>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img class="d-block w-100" src="grocery.jpg" alt="First slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="fashion.jpg" alt="Second slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="electronic.jpg" alt="Third slide">
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
 
 
 
   
-
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<div class="row" id="printcard">  
-
-<script>
-
-
-var vimg;
-var data=[{"image" : "abc.png" , "para" : "Hi..iam rohit.and this 1st card"},{"image" : "sqr.png", "para" : "Hi..iam rakesh.and this 2st card"}]
-var html = '<div class="col-md-12">';
-html += '<div class="card">';
-html += '<div class="row">';
-html += '<div class="col-md-4 userimg"> </div>';
-html += '<div class="col-md-8 px-3">';
-html += '<div class="card-block px-3">';
-html += '<h4 class="card-title">sometitle</h4>';
-html += '</div>';
-html += '</div>';
-html += '</div>';
-html += '</div>';
-html += '</div>';
-
-for (var i = 0; i < data.length; i++) {
-  $('#printcard').append(html);
-
-  uimg = data[i].image;
-
-  var $img = $("<img/>");
-  $img.width('340px');
-  $img.height('220px');
-  $img.attr("src", "data:image/png;base64," + uimg);
-  $(".userimg:eq("+i+")").append($img);
-}
-
-
-
-</script>
-
-
-
-<div class="card-deck" style=" margin:20px; margin-left:60px;margin-right:60px">
-        <div class="card" style="width: 18rem;">
-  <img class="card-img-top" src="bis.jpeg" alt="Card image cap">
-  <div class="card-body">
-    <h5 class="card-title">BRITANNIA Cookies</h5>
-    <p class="card-text">The NutriChoice Essentials Ragi Cookies are Diabetic Friendly healthy biscuits crafted specially to provide a healthy snack for Diabetics.</p>
-  </div>
-  <ul class="list-group list-group-flush">
-    <li class="list-group-item">Price: ₹59</li>
-    <li class="list-group-item">Best before 06 Dec 2021</li>
-    <li class="list-group-item">Manufactured date 10 Jul 2021</li>
-  </ul>
-  <div class="card-body">
-    <a href="Cookies.html" class="card-link">Read More</a>
- 
-  </div>
-</div>
-
-
-<script type="text/javascript">
-$.ajax({
-    var html = '<div class="card-deck" style=" margin:20px; margin-left:60px;margin-right:60px">';
-    html += '<div class="card">';
-    html += '<div class="card" style="width: 18rem;">';
-    html += '<div class="col-md-4 userimg"> </div>';
-    html += '<div class="col-md-8 px-3">';
-    html += '<div class="card-block px-3">';
-    html += '<h4 class="card-title">sometitle</h4>';
-    html += '</div>';
-    html += '</div>';
-    html += '</div>';
-    html += '</div>';
-    html += '</div>';
-    url: 'cards.json',
-    dataType: 'json',
-    success: function(data) {
-        for (var i=0; i<data.length; i++) {
-            var row = $('<tr><td>' + data[i].zipcode+ '</td><td>' + data[i].city + '</td><td>' + data[i].county + '</td></tr>');
-            $('#myTable').append(row);
-        }
-    },
-    error: function(jqXHR, textStatus, errorThrown){
-        alert('Error: ' + textStatus + ' - ' + errorThrown);
-    }
-});
-</script>
-
-
-
-
-
-</div>
 
 
 
